--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -6,8 +6,7 @@
     &-wrapper
         display: grid
         grid-template-columns: repeat(4, minmax(min-content, 1fr))
-        grid-row-gap: 25px
-        grid-column-gap: 117px
+        grid-gap: 25px
         grid-auto-rows: minmax(40px, min-content)
         align-items: start
     &__logo
@@ -18,6 +17,8 @@
         // object-fit: fill
     &__categories
         grid-row: 1/4
+    &__legal
+        padding-left: 70px
     &__social
         &-links
             display: flex
@@ -110,6 +111,7 @@
         font-size: 12px;
         line-height: 15px
         color: $light
+        cursor: pointer
     &__info
         font-style: normal;
         font-weight: bold;
